--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.61",
-    "@vuepress/plugin-back-to-top": "^2.0.0-beta.61",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.61",
-    "@vuepress/plugin-nprogress": "^2.0.0-beta.61",
-    "@vuepress/plugin-search": "^2.0.0-beta.61",
+    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/plugin-back-to-top": "2.0.0-beta.61",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.61",
+    "@vuepress/plugin-nprogress": "2.0.0-beta.61",
+    "@vuepress/plugin-search": "2.0.0-beta.61",
     "vue": "^3.2.47",
-    "vuepress": "^2.0.0-beta.61"
+    "vuepress": "2.0.0-beta.61"
   }
 }
